--- a/build-untitled-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Debug
+++ b/build-untitled-Desktop_Qt_5_8_0_MinGW_32bit-Debug/Makefile.Debug
@@ -808,47 +808,13 @@ debug/main.o: ../CIS202_Final-JohnTwedt/main.cpp ../CIS202_Final-JohnTwedt/mainw
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/QRegularExpressionValidator \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qvalidator.h \
 		ui_mainwindow.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/QVariant \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QAction \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qaction.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qactiongroup.h \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QApplication \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qapplication.h \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qcoreapplication.h \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qeventloop.h \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qdesktopwidget.h \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qguiapplication.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qinputmethod.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QButtonGroup \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QGroupBox \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgroupbox.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHBoxLayout \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qboxlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgridlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHeaderView \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qheaderview.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemview.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qabstractitemmodel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qitemselectionmodel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstyleoption.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractspinbox.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qslider.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractslider.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstyle.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qtabbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qrubberband.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QLabel \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlabel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QStatusBar \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstatusbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QToolBar \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qtoolbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QVBoxLayout \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QWidget
+		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qinputmethod.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\main.o ..\CIS202_Final-JohnTwedt\main.cpp
 
 debug/mainwindow.o: ../CIS202_Final-JohnTwedt/mainwindow.cpp ../CIS202_Final-JohnTwedt/mainwindow.h \
@@ -993,47 +959,6 @@ debug/mainwindow.o: ../CIS202_Final-JohnTwedt/mainwindow.cpp ../CIS202_Final-Joh
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/QRegularExpressionValidator \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qvalidator.h \
 		ui_mainwindow.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/QVariant \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QAction \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qaction.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qactiongroup.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QApplication \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qapplication.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qcoreapplication.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qeventloop.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qdesktopwidget.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qguiapplication.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qinputmethod.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QButtonGroup \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qbuttongroup.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QGroupBox \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgroupbox.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHBoxLayout \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qboxlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgridlayout.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHeaderView \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qheaderview.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemview.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qabstractitemmodel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qitemselectionmodel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemdelegate.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstyleoption.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractspinbox.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qslider.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractslider.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstyle.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qtabbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qrubberband.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QLabel \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qlabel.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QStatusBar \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstatusbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QToolBar \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qtoolbar.h \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QVBoxLayout \
-		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QWidget \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/QDebug
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o ..\CIS202_Final-JohnTwedt\mainwindow.cpp
 
